--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
         </section>
 
         <section class="assuntos">
-            <button>
+            <button class="botao_html">
                 <div>
                     <img src="./assets/images/icon-html.svg" alt="Icone do html">
                 </div>
                 HTML
             </button>
 
-            <button>
+            <button class="botao_css">
                 <div>
                     <img src="./assets/images/icon-css.svg" alt="Icone do css">
                 </div>
                 CSS
             </button>
 
-            <button>
+            <button class="botao_javascript">
                 <div>
                     <img src="./assets/images/icon-js.svg" alt="Icone do js">
                 </div>
                 Javasript
             </button>
 
-            <button>
+            <button class="botao_acessibilidade">
                 <div>
                     <img src="./assets/images/icon-accessibility.svg" alt="Icone do acessibilidade">
                 </div>
