--- a/index.html
+++ b/index.html
@@ -36,28 +36,28 @@
                 <div>
                     <img src="./assets/images/icon-html.svg" alt="Icone do html">
                 </div>
-                HTML
+                <span>HTML</span>
             </button>
 
             <button class="botao_css">
                 <div>
                     <img src="./assets/images/icon-css.svg" alt="Icone do css">
                 </div>
-                CSS
+                <span>CSS</span>
             </button>
 
             <button class="botao_javascript">
                 <div>
                     <img src="assets/images/icon-javascript.svg" alt="Icone do javascript">
                 </div>
-                Javascript
+                <span>Javascript</span>
             </button>
 
             <button class="botao_acessibilidade">
                 <div>
                     <img src="./assets/images/icon-acessibilidade.svg" alt="Icone do acessibilidade">
                 </div>
-                Acessibilidade
+                <span>Acessibilidade</span>
             </button>
         </section>
     </main>
